Introduced operation retries when GSS connection failures are encountered (#688)

--- a/server/pxf-service/src/templates/templates/pxf-site.xml
+++ b/server/pxf-service/src/templates/templates/pxf-site.xml
@@ -54,4 +54,13 @@
         <description>Specifies whether Predicate Pushdown feature is enabled for Hive profiles.</description>
     </property>
 
+    <property>
+        <name>pxf.sasl.connection.retries</name>
+        <value>5</value>
+        <description>
+            Specifies the number of retries to perform when a SASL connection is refused by a Namenode
+            due to 'GSS initiate failed' error.
+        </description>
+    </property>
+
 </configuration>
