--- a/docs/content/upgrade_6.html.md.erb
+++ b/docs/content/upgrade_6.html.md.erb
@@ -42,7 +42,7 @@ Perform this procedure before you upgrade to a new version of PXF 6.x:
 
 ## <a id="pxfinst"></a>Step 2: Installing the New PXF 6.x
 
-Follow the steps outlined in [Installing PXF 6.x](../release/installing_pxf.html), and identify and note the new PXF version number.
+Install PXF 6.x and identify and note the new PXF version number.
 
 
 ## <a id="pxfup"></a>Step 3: Completing the Upgrade to a Newer PXF 6.x
