docs - misc updates and upgrade info for new stdout/err logging (#745)

--- a/docs/content/troubleshooting_pxf.html.md.erb
+++ b/docs/content/troubleshooting_pxf.html.md.erb
@@ -40,7 +40,7 @@ Most PXF error messages include a `HINT` that you can use to resolve the error, 
 
 ## <a id="pxf-loggin"></a>PXF Logging
 
-Refer to the [Logging](cfg_logging.html) topic for more information about logging levels, configuration, and the `pxf-service.log` log file.
+Refer to the [Logging](cfg_logging.html) topic for more information about logging levels, configuration, and the `pxf-app.out` and `pxf-service.log` log files.
 
 
 ## <a id="pxf-timezonecfg"></a>Addressing PXF JDBC Connector Time Zone Errors
