docs - misc spelling/clarification edits (#767)
* docs - misc spelling/clarification edits

* fix misspelling

* pxf does not support writing orc files

* do not use a dangling dash

* remove bullet from single item list

* do not use a dangling dash round 2

* note that trino example works for pxf 6.x

--- a/docs/content/cfg_logging.html.md.erb
+++ b/docs/content/cfg_logging.html.md.erb
@@ -22,7 +22,7 @@ You can change the PXF log directory if you choose.
 
 Client-level logging is managed by the Greenplum Database client; this topic details configuring logging for a `psql` client.
 
-Enabling more verbose service- or client-level logging for PXF may aid troubleshooting efforts.
+Enabling more verbose service-level or client-level logging for PXF may aid troubleshooting efforts.
 
 ## <a id="cfglogdir"></a>Configuring the Log Directory
 
@@ -30,7 +30,7 @@ The default PXF logging configuration writes log messages to `$PXF_LOGDIR`, wher
 
 To change the PXF log directory, you must update the `$PXF_LOGDIR` property in the `pxf-env.sh` configuration file, synchronize the configuration change to the Greenplum Database cluster, and then restart PXF:
 
-1. Log in to your Greenplum Database master node:
+1. Log in to your Greenplum Database master host:
 
     ``` shell
     $ ssh gpadmin@<gpmaster>
@@ -117,7 +117,7 @@ You can change the log level for the PXF Service running on a specific Greenplum
 
 To change the log level for the PXF service running on every host in the Greenplum Database cluster:
 
-1. Log in to the Greenplum Database master node:
+1. Log in to the Greenplum Database master host:
 
     ``` shell
     $ ssh gpadmin@<gpmaster>
