--- a/docs/content/troubleshooting_pxf.html.md.erb
+++ b/docs/content/troubleshooting_pxf.html.md.erb
@@ -96,7 +96,7 @@ PXF uses the `hive-site.xml` `hive.metastore.failure.retries` property setting t
 
 Perform the following procedure to configure the number of Hive MetaStore connection retries that PXF will attempt; you may be required to add the `hive.metastore.failure.retries` property to the `hive-site.xml` file:
 
-1. Log in to the Greenplum Database master node.
+1. Log in to the Greenplum Database master host.
 
 1. Identify the name of your Hive PXF server.
 
