--- a/docs/content/jdbc_pxf_mysql.html.md.erb
+++ b/docs/content/jdbc_pxf_mysql.html.md.erb
@@ -79,7 +79,7 @@ You must create a JDBC server configuration for MySQL, download the MySQL driver
 
 This procedure will typically be performed by the Greenplum Database administrator.
 
-1. Log in to the Greenplum Database master node:
+1. Log in to the Greenplum Database master host:
 
     ``` shell
     $ ssh gpadmin@<gpmaster>
