--- a/docs/content/jdbc_pxf_trino.html.md.erb
+++ b/docs/content/jdbc_pxf_trino.html.md.erb
@@ -2,6 +2,8 @@
 title: 'Example: Reading From and Writing to a Trino (formerly Presto SQL) Table'
 ---
 
+Because PXF accesses Trino using the JDBC connector, this example works for all PXF 6.x versions.
+
 In this example, you:
 
 - Create an in-memory Trino table and insert data into the table
@@ -30,7 +32,7 @@ You must create a JDBC server configuration for Trino, download the Trino driver
 
 This procedure will typically be performed by the Greenplum Database administrator.
 
-1. Log in to the Greenplum Database master node:
+1. Log in to the Greenplum Database master host:
 
     ```shell
     $ ssh gpadmin@<gpmaster>
