docs - misc rhel8 edits; os upgrade topic; gpupgrade upgrade topic (#766)
* docs - misc rhel8 edits; os upgrade topic; gpupgrade upgrade topic

* misc edits requested by bradford

* address comments from ashuka

* pxf-gp6

* user can choose to uninstall pxf for gp6

* rename pxf gupgrade scripts (pre/post)

* misc edits to os upgrade

* clarify - PXF server configuration

--- a/docs/content/intro_pxf.html.md.erb
+++ b/docs/content/intro_pxf.html.md.erb
@@ -10,7 +10,13 @@ You can query the external table via Greenplum Database, leaving the referenced 
 
 ### <a id="os"></a> Operating Systems
 
-PXF supports the Red Hat Enterprise Linux 64-bit 7.x, CentOS 64-bit 7.x, and Ubuntu 18.04 LTS operating system platforms.
+PXF is compatible with these operating system platforms and Greenplum Database versions:
+
+| OS Version | Greenplum Version |
+|--------------|-----------------|
+| RHEL 7.x, CentOS 7.x | 5.21.2+, 6.x     |
+| OEL 7.x, Ubuntu 18.04 LTS | 6.x   |
+| RHEL 8.x | 6.20+   |
 
 ### <a id="java"></a> Java
 
