--- a/docs/content/upgrade_5_to_6.html.md.erb
+++ b/docs/content/upgrade_5_to_6.html.md.erb
@@ -181,5 +181,5 @@ After you install the new version of PXF, perform the following procedure:
     gpadmin@gpmaster$ pxf cluster start
     ```
 
-1. Verify that PXF can access each external data source by querying external tables that specify each PXF server.
+1. Verify that PXF can access each external data source by querying external tables that specify each PXF server configuration.
 
